--- a/gb/22/9/30/n13835934.md
+++ b/gb/22/9/30/n13835934.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>中共“千人计划”招聘官纽约受审记 （3）</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2022/09/id13835935-161107-600x400.png" />
 <h6>成立于30多年前的CAIEP-New York在新泽西州李堡拥有这两套联排别墅公寓，作为工作人员的家庭办公室。柳忠三住安德森大道807号（左门），他的副手住隔壁的809号（右门）。（谷歌地图）
 </h6>
 <hr>
 	<p>【大纪元2022年09月30日讯】（大纪元记者蔡溶纽约报导）联邦调查局注意到，许多被盗技术似乎涉及与中国国际人才交流协会（CAIEP）、千人计划等人才招募计划相关的技术。这最终导致了CAIEP驻纽约办事处首席代表柳忠三及其副手梁晓（音）被捕。两人都不知道，几乎从他们抵达美国的那一刻起，就在FBI的全面监视之下。</p>
-<p>上接：<ahref=><a href="https://github.com/19920513/djy/blob/master/gb/22/9/29/n13835044.md#1">中共“千人计划”招聘官纽约受审记（2）</a>美国国务院要求签宣誓书 大学搞在线培训及测试 都无法约束中共人员造假欺骗美国</p>
-<p><ahref=><a href="https://github.com/19920513/djy/blob/master/gb/22/9/24/n13831743.md#1">替千人计划招人 中共高官纽约受审记（1）</a><br />
+<p>上接：<ahref=><a href="https://github.com/1992513/djy/blob/master/gb/22/9/29/n13835044.md#1">中共“千人计划”招聘官纽约受审记（2）</a>美国国务院要求签宣誓书 大学搞在线培训及测试 都无法约束中共人员造假欺骗美国</p>
+<p><ahref=><a href="https://github.com/1992513/djy/blob/master/gb/22/9/24/n13831743.md#1">替千人计划招人 中共高官纽约受审记（1）</a><br />
 自川普就职 中共“人才物色”官员日子难过 副手难拿美签</p>
 <p>上集讲到一个名叫梁晓的外专局雇员，在美国国务院的表格上宣誓她到美国大学研究学问是“真实准确”的，实际欺骗美国来为中共政府工作。在她成功获得了J-1签证后，中国国际人才交流协会驻纽约办事处（CAIEP-NY）首席代表柳忠三教她如何隐藏在纽约工作的踪迹，连薪水也要伪装。</p>
 <h2>07：继续为孙俪找赞助大学</h2>
@@ -44,40 +44,40 @@
 <p>CAIEP也负责将提供培训的美国机构认证为SAFEA培训合作伙伴，并监督来美国接受短期培训的中共官方代表团（指中共政府官员代表团、中共国有企业的雇员以及中共政府事业单位的雇员），这些代表团必须将他们的行程提交给中领馆及当地的CAIEP办事处。</p>
 <p>根据中国兰州大学2016年在网站上公布的名单，哈佛大学、杜克大学、乔治亚大学、罗格斯大学等50多个美国组织成为SAFEA的培训合作伙伴。◇</p>
 <p>（未完待续）</p>
-<p>后续：<ahref=><a href="https://github.com/19920513/djy/blob/master/gb/22/10/1/n13836588.md#1">中共“千人计划”招聘官纽约受审记（4）</a><br />
+<p>后续：<ahref=><a href="https://github.com/1992513/djy/blob/master/gb/22/10/1/n13836588.md#1">中共“千人计划”招聘官纽约受审记（4）</a><br />
 全球600个人才招聘站 中共给经费 柳忠三称他只是机器中的一个齿轮</p>
 <p>责任编辑：李悦#</p>
 	
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/12/21/n13451732.md#1">哈佛教授涉千人计划案 陪审团判利伯六罪成立</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/12/28/n13463618.md#1">程晓农：从哈佛教授落网看中共“千人计划”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/1/4/n13481553.md#1">【方菲访谈】程晓农：中共千人计划和网络攻击</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/3/5/n13623495.md#1">涉千人计划 郑小清案7日纽约州开审</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/12/21/n13451732.md#1">哈佛教授涉千人计划案 陪审团判利伯六罪成立</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/12/28/n13463618.md#1">程晓农：从哈佛教授落网看中共“千人计划”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/1/4/n13481553.md#1">【方菲访谈】程晓农：中共千人计划和网络攻击</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/3/5/n13623495.md#1">涉千人计划 郑小清案7日纽约州开审</a></li>
 <hr>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/9/28/n10747812.md#1" target="_blank">东欧剧变第一国 波兰抛弃共产主义之路</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/20/3/12/n11936131.md#1" target="_blank">台湾中大教授：《转法轮》启发研究思路</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/10/n10965227.md#1" target="_blank">林启山：刘义元卖妻</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/5/13/n7893575.md#1" target="_blank">专家看万人游行：法轮功在世界舞台令人注目</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/22/n14230977.md#1">【未解之谜】精准预言 易经大师曾仕强泄漏的天机：这些年分很关键</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/17/n14227563.md#1">坚定拒绝淫邪 积阴德得福报的实例</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/19/n14228900.md#1">【未解之谜】七星布阵 龙游石窟千年之谜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/23/n14232524.md#1">原创歌曲首发《四?二五赞歌》</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/2/23/n14187753.md#1">【古韵流芳】共饮长江水的相思情意</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/24/n14232994.md#1">【全球新闻】美法院判小粉红吴啸雷入狱9个月</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/24/n14233381.md#1">【时事军事】中共轰-20亮相会带来什么？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/23/n14231893.md#1">【菁英论坛】以伊千年恩怨 文明也会倒退</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/23/n14232466.md#1">中国空置房太多 东北女子免租金公寓也没人住</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/23/n14232152.md#1">大陆金价一夜跌14元每克 黄金股价也大跌</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/23/n14232002.md#1">【翻墙必看】秦刚有私生子实锤了</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/22/n14231770.md#1">挤下章子怡 陈法拉凭《哥斯拉大战金刚2》翻红</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/23/n14232559.md#1">前央视一姐董卿久违露面 面容憔悴引关注</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/22/n14231818.md#1">杨颖与李晨爆恋情登热搜 被质疑为某陆综炒作</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/24/n14233325.md#1">香港房市持续低迷 刘嘉玲突然抛售海景豪宅</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/22/n14231740.md#1">许美静南京演唱会翻车 观众大喊退票登热搜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/4/n14218227.md#1">4成痴呆可预防 秘诀就在这些生活方式</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/9/n14221682.md#1">克服逆境！乐观的人更有福气</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/9/n14221454.md#1">梦中猝死原因多 需注意哪些迹象及如何预防？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/22/n14231806.md#1">牙周炎增心血管疾病风险 医师荐3种牙膏去牙菌斑</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/24/4/24/n14233015.md#1">写电子邮件犯这些错误 你就太不专业了</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306413.md#1">立秋的著名成语  传递什么警讯？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305642.md#1">宋孝宗“竞选”皇位  一猫和十美女如何起作用？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309049.md#1">目睹圣母玛利亚雕像眨眼睛 美俄州民众称奇迹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304683.md#1">【未解之谜】灵异阿拉斯加 黑暗金字塔的秘密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309596.md#1">【马克时空】中国版星链逆袭 星链经验可复制吗</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307896.md#1">肩颈痛别360度转！1穴位2动作 肩颈放轻松</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309168.md#1">【时事军事】乌成功闪击主因 或改变现代作战方式</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308388.md#1">为何外国航空公司纷纷从中国撤出</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308523.md#1">北戴河会议不轻松？中共党媒头版现异常?</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308069.md#1">巴黎奥运世界各国总排名、台湾历届奥运奖牌榜一次看</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308335.md#1">周子瑜谈个子高的坏处 与志效公开真实身高</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307988.md#1">子瑜感谢志效领导TWICE 难忘成员来家里玩</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308115.md#1">Netflix遭遇最严重的动画泄密盗版事件</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308447.md#1">章子怡带8岁女儿看话剧 母女俩装扮精致</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308804.md#1">“七夕”最惨新片 《多多是条狗》票房仅300元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308042.md#1">什么是“慢购物” 为何它能抢救你的荷包？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/11/n14309023.md#1">研究发现最可能发生车祸时段 开车务必小心</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306576.md#1">蛋壳粉含丰富营养素 强健骨骼牙齿和护肤</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308504.md#1">午睡太久会失智！ 这个时间点小睡片刻最好</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307005.md#1">星巴克控必知 TOP7健康饮品及点餐5技巧</a></li>
 <hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/9/30/n13835934.htm">中共“千人计划”招聘官纽约受审记 （3）</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/19920513/djy/blob/master/gb/22/9/30/n13835934.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/9/30/n13835934.htm">中共“千人计划”招聘官纽约受审记 （3）</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/22/9/30/n13835934.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
